@@ -32,6 +32,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #10916: mmap should not segfault when a file is mapped using 0 as
+  length and a non-zero offset, and an attempt to read past the end of file
+  is made (IndexError is raised instead).  Patch by Ross Lagerwall.
+
 - Issue #10875: Update Regular Expression HOWTO; patch by 'SilentGhost'.
 
 - Issue #10827: Changed the rules for 2-digit years.  The time.asctime
